# Scheduler-WAT-v2-2024

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: app.py  config.py  job.http
src/google_api/: __init__.py  update_google_calendar.py
src/scraper/: __init__.py  scheduler_scraper.py
src/utils/: __init__.py  custom_logger.py
